2003-11-11 Theodore Kilgore <kilgota@auburn.edu>
	* library.c: added ViviCam 5B and SY-2107C cameras.


2004-10-28  Hubert Figuiere  <hfiguiere@teaser.fr>

	* sq905.c (sq_read_picture_data): Fix build for gcc 2.95
	(bug #1055868)

2003-0825 Theodore Kilgore <kilgota@auburn.edu>


	* README.913C: Description of Argus DC-1730 0x2770:0x913c camera.
	
	* library.c: Argus DC-1730 0x2770:0x913c added.
	
	* sq905.c: data type corrected in sq_access_reg ( )
	
	* sq905.h: In sq_access_reg ( ) the "index" is an int. Oops. 


2003-06-29 Theodore Kilgore <kilgota@auburn.edu>

	* sq905.c: Major rewrite. Credit to Cedric Cellier 
		<rixed@happyleptic.org> for several improvements, in particular
		sq_rewind ( ), which permits random access to photos on camera. 
	
	* sq905.h: needed changes declared.
	
	* postprocess.c: Anything special done to a photo after download 
		goes here, especially things which are experimental or 
		still not complete. 
	
	* library.c: Big changes. Video clips and capture-preview supported;
		delete-all-photos supported for those SQ cameras which will 
		do it; thumbnails supported for GUI compatibility. 
		
	* README: Updated to describe new capabilities of camlib. 

	* TODO: list of things which still need work. 
	
	* Makefile.am: postprocess.c added as source file.		


2003-11-21 Theodore Kilgore <kilgota@auburn.edu>

	* sq905.h: SQ_MODEL_MAGPIX added; ID number found by T. K.

2003-11-21 Theodore Kilgore <kilgota@auburn.edu>

	* sq905.c: The following changes are introduced:
		-- In sq_init the initialization sequence is not repeated; 
		experience has shown this to be unnecessary. 
		-- In accordance with general policy, individual credits for 
		reporting model ID numbers are placed here. Credit to 
		Fabien Devaux <fab@gnux.org> for the ID of SQ_MODEL_PRECISION.

2003-10-30  Lutz Mueller <lutz@users.sourceforge.net>

	* sq905.c: Give credit to individual people (here 
	  Paulo Tribolet Abreu <paulotex@gmx.net> who reported a special